force-app/main/default/objects/Commission_Detail__c/Commission_Detail__c.object-meta.xml
<CustomObject>
    <label>Commission Detail</label>
    <nameField>
        <displayFormat>CD-{0000000000}</displayFormat>
        <label>Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>