force-app/main/default/objects/Commission_Detail__c/fields/Commission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Commission_Statement__c</fullName>
    <label>Commission Statement</label>
    <referenceTo>Commission_Statement__c</referenceTo>
    <relationshipLabel>Commission Details</relationshipLabel>
    <relationshipName>Commission_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>