force-app/main/default/objects/Commission_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Details</relationshipLabel>
    <relationshipName>Commission_Details</relationshipName>
    <type>Lookup</type>
</CustomField>